# craterboy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml
proptest-regressions/domain/: bus.txt  cpu.txt  mbc.txt
src/: main.rs
src/application/: app.rs
src/domain/: apu.rs  bus.rs  cartridge.rs  cpu.rs  emulator.rs  framebuffer.rs  mbc.rs  mod.rs  ppu.rs  rom.rs
src/infrastructure/: mod.rs  persistence.rs  rom_loader.rs
src/interface/: audio.rs  cli.rs  gui.rs  menu.rs  mod.rs  shader_blit.wgsl  shader_menu.wgsl
tests/: fixture_mappers.rs
tests/data/: mooneye_daa_vectors.hex
tests/fixtures/roms/: mbc1_64k.gb  mbc2_64k.gb  mbc3_rtc_128k.gb  mbc5_128k.gb  rom_only_32k.gb
