[package]
name = "craterboy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pollster = "0.3"
wgpu = "0.19"
winit = "0.29"
ab_glyph = "0.2"
slint = "1.5"
rfd = "0.14"
rodio = { version = "0.18", optional = true }
gilrs = { version = "0.10", optional = true }

[features]
default = ["audio", "gamepad"]
audio = ["rodio"]
gamepad = ["gilrs"]
